<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    tools:context=".AddArticle">


    <TextView
        android:id="@+id/txt_uploadedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/TitlePostArticleTab"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_articlePost1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_artcilename"
        android:layout_width="49dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_PostArticle"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_articlePost3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <EditText
        android:id="@+id/edittxt_titleedit"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/post_articles"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/TitleBoxHint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_artcilename" />

    <TextView
        android:id="@+id/txt_artcilecontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TxtContent"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_articlePost4"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_titleedit" />

    <EditText
        android:id="@+id/edittxt_articlecontent"
        android:layout_width="353dp"
        android:layout_height="162dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/post_articles"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/ContentBoxHint"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingTop="1dp"
        android:paddingEnd="1dp"
        android:paddingBottom="110dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_artcilecontent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutedit"
        android:layout_width="318dp"
        android:layout_height="227dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/articls_buttons"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_uploadedit">

        <TextView
            android:id="@+id/txt_uploadedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/txtViewUploadImage"
            android:textColor="#000000"
            android:textSize="@dimen/txt_articlePost2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <ImageView-->
<!--            android:id="@+id/imageViewedit"-->
<!--            android:layout_width="114dp"-->
<!--            android:layout_height="122dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:backgroundTint="@color/secondary"-->
<!--            android:contentDescription="@string/imgUpload"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/txt_uploadedImage"-->
<!--            app:srcCompat="@drawable/ic_baseline_photo_library_24"-->
<!--            tools:ignore="ImageContrastCheck"-->
<!--            android:onClick="selectImage"/>-->
        <ImageView
            android:id="@+id/imageViewedit"
            android:layout_width="114dp"
            android:layout_height="122dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/imgUpload"
            android:onClick="selectImage"
            android:src="@drawable/ic_baseline_photo_library_24"
            tools:ignore="ImageContrastCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_uploadedImage" />

        <TextView
            android:id="@+id/txtview8edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/infoAboutImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewedit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonedit"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/post_button"
        android:text="@string/btn_post"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonsedit"
        android:layout_width="51dp"
        android:layout_height="59dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:clickable="true"
        android:contentDescription="@string/backButtonPostTab"
        android:focusable="true"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/txt_uploadedit"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Type"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutedit" />

    <Spinner
        android:id="@+id/spinner3"

        android:layout_width="297dp"
        android:layout_height="26dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="6dp"
        android:elevation="25dp"
        android:entries="@array/article_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>