<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constedit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp">

    <TextView
        android:id="@+id/txt_editphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/EditeArticleTab"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_articleEdit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_artcilenameedit"
        android:layout_width="49dp"
        android:layout_height="22dp"
        android:layout_marginTop="80dp"
        android:text="Edit"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_articleEdit_Edit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutedit" />

    <EditText
        android:id="@+id/edittxt_titleedit"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/post_articles"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/EditTitleHint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_artcilenameedit" />

    <TextView
        android:id="@+id/txt_artcilecontentedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/EditContent"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_articleEdit_EditContent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_titleedit" />

    <EditText
        android:id="@+id/edittxt_articlecontentedit"
        android:layout_width="353dp"
        android:layout_height="162dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/post_articles"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/AddcontentHint"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:paddingBottom="110dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_artcilecontentedit" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutedit"
        android:layout_width="318dp"
        android:layout_height="227dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/articls_buttons"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_editphoto">

        <TextView
            android:id="@+id/txt_uploadedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/edit_photo"
            android:textColor="#000000"
            android:textSize="@dimen/txt_articleEdit2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewedit"
            android:layout_width="114dp"
            android:layout_height="122dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#592942"
            android:contentDescription="@string/editarticleimg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_uploadedit"
            app:srcCompat="@drawable/ic_baseline_photo_library_24"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtview8edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/EditImgInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewedit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonedit"
        android:layout_width="196dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/post_button"
        android:text="@string/edit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_articlecontentedit"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonsedit"
        android:layout_width="51dp"
        android:layout_height="59dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:clickable="true"
        android:contentDescription="@string/backedittab"

        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="SpeakableTextPresentCheck"
        android:focusable="true" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="297dp"
        android:layout_height="26dp"
        android:layout_marginTop="52dp"
        android:elevation="25dp"
        android:entries="@array/article_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutedit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutedit" />

</androidx.constraintlayout.widget.ConstraintLayout>