<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/currency_color"
    android:elevation="45dp"
    android:padding="15dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="362dp"
        android:layout_height="434dp"
        android:background="@drawable/post_articles"
        android:backgroundTint="@color/white"
        android:elevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351">


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="279dp"
            android:layout_height="57dp"
            android:layout_marginTop="148dp"
            android:entries="@array/currency_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_converter" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="279dp"
            android:layout_height="57dp"
            android:layout_marginTop="48dp"
            android:elevation="25dp"
            android:entries="@array/currency_options1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_converter"
            android:layout_width="219dp"
            android:layout_height="36dp"
            android:layout_marginTop="28dp"
            android:text="@string/currency_converter"
            android:textColor="@color/secondary"
            android:textSize="@dimen/txt_CurrencyTab"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="101dp"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:text="@string/amountView"
            android:textColor="#000000"
            android:textSize="@dimen/txt_CurrencyTab2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_converter" />

        <EditText
            android:id="@+id/amount_"
            android:layout_width="214dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/artciles_cardview"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/amounthint"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.269"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_total"
            tools:ignore="TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cal_value"
            android:textColor="@color/secondary"
            android:textSize="@dimen/txt_articleEdit3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:contentDescription="@string/convertback"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="441dp"
        android:layout_height="166dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/currencyimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>